--- a/Wakanda/style.css
+++ b/Wakanda/style.css
@@ -46,6 +46,8 @@ p{
     text-align: justify;
     font-family: 'Cantarell';
     font-size: 16px;
+
+    margin-top: 20px;
 }
 
 .container{
@@ -128,6 +130,18 @@ nav ul a:hover{
 }
 
 #origine .container .second{
+    padding-left: 40px;
+}
+
+#origine2 .container{
+    display: flex;
+}
+
+#origine2 .container .first{
+    padding-right: 40px;
+}
+
+#origine2 .container .second{
     padding-left: 40px;
 }
 
